# flask-simple-chats

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  manage.py  requirements.txt  setup.cfg  setup.py
app/: __init__.py  commands.py  config.py  views.py
app/api/: __init__.py  auth.py  decorators.py  utils.py
app/api/resources/: chats.py  messages.py  users.py
app/authentication/: __init__.py  decorators.py  email.py  exceptions.py  models.py  validators.py  views.py
app/chats/: __init__.py  events.py  exceptions.py  models.py  utils.py  views.py
app/static/: style.css
app/static/css/: style.css
app/static/js/: ajax_search.js  socket_chat.js
app/templates/: 404.html  base.html  index.html
app/templates/authentication/: forgot_password.html  login.html  register.html  reset_password.html  reset_password_expired.html
app/templates/authentication/emails/: reset_password.txt  reset_password_rest.txt
app/templates/chats/: going.html  list.html  search.html
documentation/: Software requirements specification.md
migrations/versions/: 037027ecc99a_add_message_model.py  1898f0bcaaf5_add_simple_user_model.py  53a9bfcfee47_add_chats_table.py  ac141622b2da_add_chat_id_into_chats_table_and_into_.py
nginx/: nginx.conf
tests/: __init__.py  test_api_client.py  test_api_utils.py  test_client.py  test_init.py  test_message_model.py  test_socketio_events.py  test_user_model.py  test_utils.py  test_validators.py
