[metadata]
name = flask-simple-chats
version = 0.5
author = Afanasev Dmytro
author_email = duma12let@gmail.com
description = A simple flask application to communicate with other people via browsers
long_description = file: README.md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    Flask-SQLAlchemy
    psycopg2
    Flask-Migrate
    Flask-Mail
    email-validator
    flask-socketio
    flask-restful
    eventlet
