[metadata]
name = flask-simple-chats
version = 1.0
author = Afanasev Dmytro
author_email = duma12let@gmail.com
description = A simple flask application to communicate with other people via browsers
long_description = file: README.md

[options]
packages = find:
include_package_data = true
install_requires =
    Werkzeug==1.0.1
    Flask==1.1.2
    Flask-SQLAlchemy==2.5.1
    psycopg2==2.8.6
    Flask-Migrate==2.7.0
    Flask-Mail==0.9.1
    Flask-WTF==0.14.3
    email-validator==1.1.2
    flask-socketio==5.0.1
    flask-restful==0.3.8
    eventlet==0.30.2
    gunicorn==20.1.0
